--- a/views/logo.ejs
+++ b/views/logo.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header") %>
-<section id="header">
+<section id="header" class="project-header" >
     <div class="wrapper">
-        <div class="header-main">
+        <div class="header-main project-main">
             <div class="bio">
                 <h2>Make your mark with a logo!</h2>
                 <h1 class="name">Custom logo design</h1>
@@ -12,10 +12,10 @@
                 </div>
             </div>
             <div class="logo-header-grid">
-                <div><img src = "/images/bookworld.png" alt="logo"></div>
-                <div><img src = "/images/logo1.jpg" alt="logo"></div>
-                <div><img src = "/images/logo2.jpeg" alt="logo"></div>
-                <div><img src = "/images/SIMBS Logo.png" alt="logo"></div>
+                <div class="logo1"><img src = "/images/bookworld.png" alt="logo"></div>
+                <div class="logo2"><img src = "/images/logo1.jpg" alt="logo"></div>
+                <div class="logo3"><img src = "/images/logo2.jpeg" alt="logo"></div>
+                <!-- <div><img src = "/images/SIMBS Logo.png" alt="logo"></div> -->
             </div>
             
         </div>
